[gd_scene load_steps=14 format=3 uid="uid://mehk40q8xcwn"]

[ext_resource type="Texture2D" uid="uid://bv5anckcdn3ho" path="res://Assets/sprites-Sheet.png" id="1_7kpp1"]
[ext_resource type="Script" uid="uid://cwnhf57gwffp1" path="res://Scripts/power_station.gd" id="1_bo5yh"]
[ext_resource type="Texture2D" uid="uid://dkxb0f22kuae3" path="res://Assets/Free Smoke Fx  Pixel 04.png" id="2_oeb2w"]
[ext_resource type="AudioStream" uid="uid://d33f6bqkt3l6h" path="res://Assets/Sounds/bomb_explosion.wav" id="4_fwnpl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_oeb2w"]
atlas = ExtResource("1_7kpp1")
region = Rect2(144, 23, 16, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_bo5yh"]
atlas = ExtResource("2_oeb2w")
region = Rect2(0, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_fwnpl"]
atlas = ExtResource("2_oeb2w")
region = Rect2(64, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_md762"]
atlas = ExtResource("2_oeb2w")
region = Rect2(128, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_vvfq6"]
atlas = ExtResource("2_oeb2w")
region = Rect2(192, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dyvat"]
atlas = ExtResource("2_oeb2w")
region = Rect2(256, 320, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0vc7l"]
atlas = ExtResource("2_oeb2w")
region = Rect2(320, 320, 64, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_ul8lm"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_oeb2w")
}],
"loop": false,
"name": &"default",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bo5yh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fwnpl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_md762")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vvfq6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dyvat")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0vc7l")
}],
"loop": false,
"name": &"explosion",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_oeb2w"]
size = Vector2(9, 32)

[node name="PowerStation" type="Area2D"]
collision_layer = 16
script = ExtResource("1_bo5yh")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_ul8lm")
autoplay = "default"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, 0)
shape = SubResource("RectangleShape2D_oeb2w")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_fwnpl")

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="body_exited" from="." to="." method="_on_body_exited"]
[connection signal="animation_finished" from="AnimatedSprite2D" to="." method="_on_animated_sprite_2d_animation_finished"]
